# TFG

./: CMakeLists.txt  README.md  TFG.cpp  TFG.h  adyacencia.cl  analisis.h  caja.h  dinamica.cl  dinamica.h  distancias.cl  fuerzas.cl  suma.cl
